fixing overflow issue with code snippets

--- a/src/components/base.css
+++ b/src/components/base.css
@@ -93,3 +93,7 @@ a {
       "footer footer footer footer";
   }
 }
+
+pre {
+  white-space: pre-wrap;
+}
